--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web developer portpolio</title>
+    <title>my name rakhi</title>
 </head>
 <body>
     <header>
         <h1>my name is rakhi</h1>
+        <p>my frather name sahidgit</p>
 
     </header>
         
