--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my good friend</title>
+    <title>my frather is a best fratherg</title>
 </head>
 <body>
-    <header>
-        <h2>my frieend bithi</h2>
-    </header>
     
 </body>
 </html>
